2.99.7:

2011-03-23  Murray Cumming  <murrayc@murrayc.com>

	Remove Gtk::Application until later.

	* gtk/src/application.[hg|ccg]: Removed this file.
	* gtk/src/filelist.am: Remove mention of the file.
	* gtk/src/window.hg: Remove API that uses the Application class.

  See http://bugzilla.gnome.org/show_bug.cgi?id=637445#c17

2.99.6:

2011-03-16  Murray Cumming  <murrayc@murrayc-desktop>

	TreeView: Removed unused TreeView::_get_base_model() method.

	* gtk/src/treeview.[hg|ccg]: As suggested by Kjell Ahlstedt in
	https://bugzilla.gnome.org/show_bug.cgi?id=582981#c16

2010-12-27  Luca Wehrstedt  <lerks@users.sourceforge.net>

	Make TreeModelFilter behave like TreeModelSort for editable TreeViews.

	* gtk/src/treemodel.hg: Add references to TreeModelFilter.
	* gtk/src/treemodelfilter.ccg: Make set_value_impl() convert the iter
	and call the same method on its child.
	* gtk/src/treeview.ccg: Check also for TreeModelSort inside of
	_get_base_model(). Update the toggle auto-store method.
	* gtk/src/treeview.hg: Update all auto-store methods.

	Bug #582981

2011-03-07  Murray Cumming  <murrayc@murrayc.com>

	Main: Improve the documentation.

	* gtk/src/main.hg: Improve the overview documentation and the constructors'
	documentation.

2011-03-07  Murray Cumming  <murrayc@murrayc.com>

	Gtk::Main: Add a constructor with no argc and argv.

	* gtk/src/main.[hg|ccg]: Main: Add a public constructor with no argc/argv
	parameters, becase that is now officially allowed by the C API.
	See https://bugzilla.gnome.org/show_bug.cgi?id=643649#c3

2011-03-04  Murray Cumming  <murrayc@murrayc.com>

	Window: Added unset_application,

	* gtk/src/window.[hg|ccg]: Added unset_application() because the parameter
	can be NULL.

2011-02-23  Murray Cumming  <murrayc@murrayc.com>

	Added class overview documentation for new classes.

	* gdk/src/devicemanager.hg:
	* gdk/src/rgba.hg:
	* gtk/src/buildable.hg:
	* gtk/src/cellarea.hg:
	* gtk/src/cellareabox.hg:
	* gtk/src/cssprovider.hg: