@@ -34,6 +34,11 @@ MM_PREREQ([0.9.3])
 MM_INIT_MODULE([gdkmm-3.0])
 MM_INIT_MODULE([gtkmm-3.0])
 
+# Copy the mm-common .pl scripts into docs/,
+# and use them from there,
+# so we can dist them to avoid a tarball-build dependency.
+MM_CONFIG_DOCTOOL_DIR([docs])
+
 # http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
 AC_SUBST([LIBGTKMM_SO_VERSION], [2:0:1])
 
