@@ -1,3 +1,12 @@
+2011-03-25  Murray Cumming  <murrayc@murrayc.com>
+
+	Avoid a tarball dependency on mm-common.
+
+	* configure.ac: Add a call to MM_CONFIG_DOCTOOL_DIR() telling it to
+	copy the files locally and use them from there.
+	* docs/Makefile.am: Dist the copied files, so that the build does not
+	try to use the versions installed by mm-common.
+
 2.99.7:
 
 2011-03-23  Murray Cumming  <murrayc@murrayc.com>
